--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <div class="logo">
-      <img src="Mvala logo.jpg" alt="Logo" />
+      <img src="mvala logo.jpg" alt="Logo" />
       <h1>Mvala's Car Market</h1>
     </div>
     <div id="menuBtn" class="menu-toggle">&#9776;</div>
